styles/Navbar.module.css
.navbar {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding-top: 1rem;
    padding-bottom: 1rem;
    background-color: var(--white);
    color: black;
    padding-right: max((calc(100vw - 1500px))/2, 1rem);
    padding-left: max((calc(100vw - 1500px))/2, 1rem);
}

.right{
    width: 50vw;
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.link {
    margin-left: 2rem;
    text-align: right;
    font-family: var(--font-stereogothic);
    font-size: 1.2rem;
    border-radius: 10px;
    padding: 1rem;
    padding-top: .5rem;
    padding-bottom: .5rem;
    transition: background 0.3s, color 0.3s;
}

.contact {
    border: solid 1px var(--green);
    color: var(--green);
}

.link:hover {
    background: rgb(114, 145, 129);
    color: var(--white)
}

.active {
    background: rgb(28, 28, 28);
    color: var(--white)
}

.logo {
    width: 200px !important;
    margin-left: 0;
    margin-right: auto;
    cursor: pointer;
}

